# telo

./: .changie.yaml  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CLOUDE.md  Caddyfile  Cargo.toml  LICENSE  README.md  STYLEGUIDE.md  chat-history.sqlite  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-suite.yaml  tsconfig.base.json
.changeset/: abstract-kind-error.md  actionable-network-errors.md  add-image-module.md  add-pdf-module.md  add-s3-presigned-url.md  ai-agent-stream.md  ai-agent-tool-use.md  ai-mcp-image-content.md  ai-module-and-openai-provider.md  ai-multimodal-content.md  ai-openai-direct-http.md  ai-openai-multimodal.md  ai-openai-silence-sdk-warnings.md  ai-openai-stream-tool-calls.md  ai-text-rename-and-textstream.md  align-editor-import-boundary.md  analyzer-accepted-kinds-for-ref.md  analyzer-aliases-for-module.md  analyzer-catch-dup-name-and-bad-alias.md  analyzer-context-element-from.md  analyzer-dedup-identical-manifests.md  analyzer-elseif-step-context.md  analyzer-immutable-manifests.md  analyzer-import-non-library-error.md  analyzer-kind-descriptions.md  analyzer-map-value-cel.md  analyzer-output-type-for-kind.md  analyzer-persists-aliases-by-module.md  analyzer-ref-fields-for-resource.md  analyzer-schema-tagged-sentinels.md  analyzer-step-context-control-flow.md  analyzer-step-invoke-references.md  analyzer-suggest-kind.md  application-env-variables.md  application-ports.md  apps-dedicated-endpoint.md  assert-equals-matches-contains.md  benchmark-quick-wins.md  brown-seals-joke.md  bundle-controllers-kernel.md  (+264 more)
.claude/: settings.json
apps/telo-editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/telo-editor/src-tauri/capabilities/: default.json
apps/telo-editor/src-tauri/src/: lib.rs  local_runner.rs  main.rs
apps/telo-editor/src-tauri/src/run/: availability.rs  bundle.rs  docker.rs  mod.rs  session.rs
benchmarks/: README.md  feedback-api.ts  feedback-api.yaml  feedback-benchmark.yaml  text-api.ts  text-api.yaml  text-benchmark.yaml
cli/: README.md
docs/: coding-agents.md
examples/: .env.local.example  agent-console.yaml  chat-console.yaml  configurable-console-import.yaml  configurable-console.yaml  configurable-http-server.yaml  console-user-input.yaml  draw-shapes-agent.yaml  feedback-api-repo.yaml  feedback-api.yaml  feedback-benchmark.yaml  hello-api.yaml  hello-world.yaml  javascript-demo.yaml  starlark-basic.yaml  templated-api-usage.yaml  templated-api.yaml  workflow-temporal.yaml
guides/: style-guide.md  templating.md
kernel/: CONTROLLERS.md  EVALUATION_CONTEXT.md  MODULES.md  README.md  data-types.md  problems.md
kernel/nodejs/tests/napi-echo/: Cargo.toml
kernel/nodejs/tests/napi-echo/src/: lib.rs
modules/: README.md
modules/starlark/rust/: Cargo.toml
modules/starlark/rust/src/: lib.rs
pages/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
plans/: changesets-to-changie.md  debug-event-ui.md  debug-logs-and-editor-embed.md  federated-discovery-and-oci.md  federated-discovery.md  federated-registries.md  module-transports.md  oci-dual-publish.md  remove-telo-registry.md  transitive-re-export.md  url-shortener-example.md
runtime/: README.md
scripts/: changie-release.mjs  check-no-major-bump.mjs  check-no-major-module-bump.mjs  gen-changie-config.mjs  generate-runtime-deps.mjs  module-publish-order.mjs  npm-unpublish-1x.mjs  prepack-bake-overrides.mjs  publish-oci-backfill.mjs  publish-packages.mjs  publish-umbrella.mjs  release-modules.mjs  release.mjs  test.sh  upgrade-docs.mjs  version-packages.mjs
sdk/: README.md
sdk/rust/: Cargo.toml  README.md
sdk/rust/macros/: Cargo.toml
sdk/rust/macros/src/: lib.rs
sdk/rust/plans/: mirror-nodejs-docs.md
sdk/rust/src/: error.rs  invoke_context.rs  lib.rs  logging.rs  traits.rs
sdk/rust/src/backend/: mod.rs  napi.rs  native.rs
tests/: README.md  abstract-forward-compatible-fields.yaml  abstract-import-smoke.yaml  abstract-mismatched-aliases-rejects-wrong-kind.yaml  abstract-mismatched-aliases.yaml  alias-equals-module-name.yaml  application-ports.yaml  base-cel-clean.yaml  base-schema-mismatch.yaml  bundle-controller-loads.yaml  can-import-module-with-alias.yaml  capability-shadows-extends.yaml  cel-stdlib-regex.yaml  cel-stdlib.yaml  cross-module-ref-injection.yaml  example-starlark-basic.yaml  extends-malformed.yaml  extends-non-abstract.yaml  extends-unknown-target.yaml  http-client.yaml  import-input-rejects-resources.yaml  (+34 more)
(+2208 files in other folders)
