[package]
name = "telorun-sdk"
version = "0.0.0"
edition = "2021"
publish = false
description = "Pure-Rust traits and FFI backends for authoring Telo controllers in Rust."

[lib]
crate-type = ["rlib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]
native = []

[dependencies]
serde_json = "1"
thiserror = "1"
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
telorun-sdk-macros = { path = "./macros" }
