[package]
name = "telo-editor"
version = "0.1.0"
description = "Telo Editor"
authors = ["bartosz.pasinski@codenet.pl"]
license = ""
repository = ""
default-run = "telo-editor"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "telo_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "net", "rt-multi-thread", "time", "macros", "sync"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Empty workspace table makes this crate its own workspace root, decoupling
# it from the repo-root Cargo.toml's pnpm-workspace setup. Without this,
# `cargo` walks up to the root Cargo.toml and refuses to build because this
# crate isn't listed in `workspace.members` there. Tauri's own tooling does
# not depend on the parent workspace either way.
[workspace]
