[package]
name = "telorun-sdk-macros"
version = "0.0.0"
edition = "2021"
publish = false
description = "Proc macros for the Telo SDK. The #[controller] attribute generates FFI bindings per active backend."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
